--- a/assets/styles/help.css
+++ b/assets/styles/help.css
@@ -1,7 +1,7 @@
 .help-button {
   position: fixed;
   top: 20px;
-  right: 20px;
+  left: 20px;
   width: 40px;
   height: 40px;
   border-radius: 50%;
