--- a/assets/styles/game/game.css
+++ b/assets/styles/game/game.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
+    justify-content: center;
     }
 
     #game {
@@ -10,7 +11,7 @@
         flex-direction: column;
         flex: 1;
         overflow: hidden;
-        justify-content: space-between;
+        justify-content: center;
         }
         
         
