--- a/assets/styles/game/game.css
+++ b/assets/styles/game/game.css
@@ -23,7 +23,7 @@
         top: 10%;
         left: 50%;
         transform: translateX(-50%);
-        background-color: var(--color-text);
+        background-color: #F84B5F;
         color: white;
         padding: 1rem 2rem;
         border-radius: 12px;
@@ -63,14 +63,12 @@
               right: 20px;
               width: 40px;
               height: 40px;
-              border-radius: 50%;
               display: flex;
               justify-content: center;
               align-items: center;
               color: white;
               font-size: 24px;
               text-decoration: none;
-              box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
               z-index: 100;
             }
             
