--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -32,7 +32,6 @@
   header {
   text-align: center;
   padding-bottom: 0.5rem;
-  border-bottom: 2px solid var(--color-border);
   }
   
   header h1 {
@@ -42,8 +41,12 @@
   color: var(--color-text);
   }
   
-  @media (max-width: 500px) {
+@media (max-width: 500px) {
     body {
       padding: 0.5rem;
     }
-  }
+    
+    header {
+      padding-top: 12px; 
+    }
+}
